--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,9 @@ repositories {
 }
 
 dependencies {
+    // https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple
+    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+
     implementation 'io.reactivex.rxjava2:rxjava:2.2.6'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
